--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,16 +12,11 @@
         tools:layout="@layout/fragment_login" />
     <fragment
         android:id="@+id/recomendationsFragment"
-        android:name="com.example.quecomohoy.ui.login.RecomendationsFragment"
+        android:name="com.example.quecomohoy.RecomendationsFragment"
         android:label="fragment_recomendations"
         tools:layout="@layout/fragment_recomendations" >
         <action
             android:id="@+id/action_recomendationsFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/blankFragment"
-        android:name="com.example.quecomohoy.BlankFragment"
-        android:label="fragment_blank"
-        tools:layout="@layout/fragment_blank" />
 </navigation>
