--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".FavouritesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
+        android:id="@+id/textView"
+        android:layout_width="128dp"
+        android:layout_height="29dp"
+        android:text="Pantalla Favoritos" />
 </FrameLayout>
