--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -17,4 +17,8 @@
         android:id="@+id/profileFragment"
         android:title=""
         android:icon="@drawable/ic_profile"/>
+    <item
+        android:id="@+id/registrationFragment"
+        android:title=""
+        android:icon="@drawable/ic_profile"/>
 </menu>
