--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_recomendationsFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_recomendationsFragment_to_registrationFragment"
+            app:destination="@id/registrationFragment" />
     </fragment>
     <fragment
         android:id="@+id/favouritesFragment"
@@ -34,4 +37,9 @@
         android:name="com.example.quecomohoy.ProfileFragment"
         android:label="Perfil"
         tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/registrationFragment"
+        android:name="com.example.quecomohoy.ui.registration.RegistrationFragment"
+        android:label="Registrate"
+        tools:layout="@layout/fragment_registration" />
 </navigation>
