--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="babyGreen">#ccffc6</color>
     <color name="darkOrange">#ffa734</color>
     <color name="lightOrange">#ffcd5e</color>
+    <color name="button_color">#ffa734</color>
 
 </resources>
