--- a/app/src/main/res/layout/fragment_recomendations.xml
+++ b/app/src/main/res/layout/fragment_recomendations.xml
@@ -13,4 +13,12 @@
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecommendation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="43dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
