--- a/app/src/main/res/layout/recomendation_item.xml
+++ b/app/src/main/res/layout/recomendation_item.xml
@@ -11,6 +11,7 @@
         android:layout_marginLeft="11dp"
         android:layout_marginTop="7dp"
         android:layout_marginRight="11dp"
+        android:layout_marginBottom="20dp"
         card_view:cardCornerRadius="10dp">
 
         <RelativeLayout
@@ -21,6 +22,11 @@
                 android:id="@+id/img"
                 android:layout_width="match_parent"
                 android:layout_height="200dp" />
+            <ImageView
+                android:src="@drawable/top_shadow"
+                android:layout_alignBottom="@id/img"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"/>
 
             <TextView
                 android:id="@+id/recomendationTitle"
@@ -30,7 +36,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:fontFamily="sans-serif-light"
                 android:text="Nombre receta"
 
