--- a/app/src/main/res/layout/favourites_item.xml
+++ b/app/src/main/res/layout/favourites_item.xml
@@ -66,7 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Pipo Gorosito"
-                        android:textAlignment="textEnd"
+                        android:textAlignment="viewStart"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
                     <ImageButton
