--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,8 +21,12 @@
         <item name="android:minHeight">80dp</item>
         <item name="cardCornerRadius">4dp</item>
         <item name="cardElevation">4dp</item>
-        <item name="cardUseCompatPadding">false</item>
+        <item name="cardUseCompatPadding">true</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_marginBottom">5dp</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.App.CornerSize50Percent" parent="">
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
