--- a/app/src/main/res/layout/user_preference_card_layout.xml
+++ b/app/src/main/res/layout/user_preference_card_layout.xml
@@ -14,15 +14,15 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="25dp"
             android:layout_toStartOf="@+id/imageView">
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:text="Dietas"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -31,6 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/title"
                 android:layout_alignStart="@+id/title"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="Vegetariano"
                 android:textSize="14sp" />
         </RelativeLayout>
