Create MVVM Diets

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,5 +42,18 @@
         android:id="@+id/profileFragment"
         android:name="com.example.quecomohoy.ui.profile.ProfileFragment"
         android:label="Perfil"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_preferencesFragment"
+            app:destination="@id/dieteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/dieteFragment"
+        android:name="com.example.quecomohoy.ui.diets.DietsFragment"
+        android:label="@string/preference_label"
+        tools:layout="@layout/fragment_diet_list">
+        <argument
+            android:name="label"
+            app:argType="string"/>
+    </fragment>
 </navigation>
