--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="darkOrange">#ffa734</color>
     <color name="lightOrange">#ffcd5e</color>
     <color name="button_color">#ffa734</color>
+    <color name="transparent">#000000</color>
 
 </resources>
