--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,7 +32,11 @@
         android:id="@+id/searchFragment"
         android:name="com.example.quecomohoy.ui.searchrecipes.SearchFragment"
         android:label="Buscar receta"
-        tools:layout="@layout/fragment_search" />
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_cameraFragment"
+            app:destination="@id/cameraFragment" />
+    </fragment>
     <fragment
         android:id="@+id/registrationFragment"
         android:name="com.example.quecomohoy.ui.registration.RegistrationFragment"
@@ -56,4 +60,9 @@
             android:name="label"
             app:argType="string"/>
     </fragment>
+    <fragment
+        android:id="@+id/cameraFragment"
+        android:name="com.example.quecomohoy.CameraFragment"
+        android:label="fragment_camera"
+        tools:layout="@layout/fragment_camera" />
 </navigation>
