--- a/app/src/main/res/layout/recomendation_item.xml
+++ b/app/src/main/res/layout/recomendation_item.xml
@@ -15,6 +15,7 @@
         card_view:cardCornerRadius="10dp">
 
         <RelativeLayout
+            android:id="@+id/cardContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
