--- a/app/src/main/res/layout/recipe_view_fragment.xml
+++ b/app/src/main/res/layout/recipe_view_fragment.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.recipe.RecipeViewFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="499dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/img"
@@ -31,8 +31,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="sans-serif-medium"
-            android:textSize="20sp"
-            android:text="Nombre receta" />
+            android:text="Nombre receta"
+            android:textSize="20sp" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
@@ -51,6 +51,13 @@
                 android:fontFamily="sans-serif-light"
                 android:text="@string/steps" />
         </com.google.android.material.tabs.TabLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvIngredientItem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tabLayout"
+            android:layout_marginTop="20dp" />
 
     </RelativeLayout>
 
