--- a/app/src/main/res/layout/recipes_item.xml
+++ b/app/src/main/res/layout/recipes_item.xml
@@ -41,11 +41,14 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:gravity="center_vertical"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/coverImageView"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
 
                 <TextView
                     android:id="@+id/titleTextView"
@@ -58,7 +61,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:orientation="horizontal">
 
@@ -71,13 +74,14 @@
                         android:textAlignment="viewStart"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
-                    <ImageButton
-                        android:id="@+id/imageButton2"
+                    <CheckBox
+                        android:id="@+id/checkbox"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="#05FFFFFF"
-                        app:srcCompat="@drawable/ic_like" />
+                        android:minWidth="0dp"
+                        android:minHeight="0dp"
+                        android:button="@drawable/sl_favourite"
+                        app:buttonTint="@android:color/black" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
