--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,8 +25,9 @@
             android:id="@+id/searchRecipeInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textFilter"
             android:minHeight="48dp"
-            android:inputType="textFilter">
+            android:textColorHint="#616161">
 
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -54,7 +55,26 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/start_cooking_button"
+        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+
+    <Button
+        android:id="@+id/start_cooking_button"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/button"
+        android:text="¡Empezá a cocinar!"
+        android:textAllCaps="false"
+        android:textColor="#5D4037"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager"
+        app:layout_constraintVertical_bias="0.7"
+        app:layout_constraintWidth_percent="0.8"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
