--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -44,7 +44,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/scan_items_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="0.05"
