sacar foto, por ahora se guarda en galeria

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -62,7 +62,31 @@
     </fragment>
     <fragment
         android:id="@+id/cameraFragment"
-        android:name="com.example.quecomohoy.CameraFragment"
+        android:name="com.example.quecomohoy.ui.camera.CameraFragment"
         android:label="fragment_camera"
-        tools:layout="@layout/fragment_camera" />
+        tools:layout="@layout/fragment_camera" >
+        <action
+            android:id="@+id/action_cameraFragment_to_imageFragment"
+            app:destination="@id/imageFragment" />
+        <action
+            android:id="@+id/action_cameraFragment_to_askPermissionFragment"
+            app:destination="@id/askPermissionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/imageFragment"
+        android:name="com.example.quecomohoy.ui.camera.ImageFragment"
+        android:label="ImageFragment" >
+        <action
+            android:id="@+id/action_imageFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/askPermissionFragment"
+        android:name="com.example.quecomohoy.ui.camera.AskPermissionFragment"
+        android:label="fragment_ask_permission"
+        tools:layout="@layout/fragment_ask_permission" >
+        <action
+            android:id="@+id/action_askPermissionFragment_to_cameraFragment"
+            app:destination="@id/cameraFragment" />
+    </fragment>
 </navigation>
