recipe view call api

--- a/app/src/main/res/layout/recipe_view_fragment.xml
+++ b/app/src/main/res/layout/recipe_view_fragment.xml
@@ -57,17 +57,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tabLayout"
             android:layout_marginTop="20dp" />
-        <TextView
-            android:id="@+id/stepsDescription"
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:id="@+id/rvStepItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tabLayout"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="15sp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            />
+            android:layout_marginTop="15dp" />
     </RelativeLayout>
 
 
