add new fav icon and styles

--- a/app/src/main/res/layout/recipes_item.xml
+++ b/app/src/main/res/layout/recipes_item.xml
@@ -15,11 +15,18 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="10dp">
-
+        <CheckBox
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="right"
+            android:id="@+id/checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:button="@drawable/selector_like_item" />
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <ImageView
                 android:id="@+id/coverImageView"
                 android:layout_width="0dp"
@@ -32,14 +39,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintWidth_percent="0.4"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
             <LinearLayout
                 android:id="@+id/linearLayout2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginBottom="8dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
@@ -49,39 +55,29 @@
                 app:layout_constraintStart_toEndOf="@+id/coverImageView"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0">
-
                 <TextView
                     android:id="@+id/titleTextView"
+                    android:textSize="18sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Omelette con cabutia"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                    android:textColor="@android:color/primary_text_light"
+                    android:fontFamily="sans-serif-light"
                     android:textStyle="bold" />
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
-
                     <TextView
                         android:id="@+id/authorTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Pipo Gorosito"
+                        android:fontFamily="sans-serif-light"
                         android:textAlignment="viewStart"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-                    <CheckBox
-                        android:id="@+id/checkbox"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:minWidth="0dp"
-                        android:minHeight="0dp"
-                        android:button="@drawable/sl_favourite"
-                        app:buttonTint="@android:color/black" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
